commit to fix the navbar and intro section alignment

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,9 @@ a:hover {
 
 /* intro styles */
 #intro {
+  padding-left: 5rem;
   padding-bottom: 10rem;
+  padding-top: 5rem;
 }
 
 #intro p {
@@ -116,8 +118,10 @@ a:hover {
 nav {
   font-family: var(--mono);
   font-size: 80%;
+  padding-left: 5rem;
   padding-top: 4rem;
   padding-bottom: 2rem;
+  padding-right: 3rem;
 }
 
 nav h1 a {
@@ -190,11 +194,9 @@ footer h2{
 
 @media (min-width: 850px) {
   nav {
-    max-width: 1200px;
     margin: 0 auto;
   }
   #intro{
-    max-width: 1200px;
     margin: 0 auto;
   } 
   nav li:first-child {
